--- a/package.json
+++ b/package.json
@@ -19,5 +19,17 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15",
     "sequelize": "^6.14.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Triono101/expressMysql-task.git"
+  },
+  "keywords": [
+    "heroku"
+  ],
+  "bugs": {
+    "url": "https://github.com/Triono101/expressMysql-task/issues"
+  },
+  "homepage": "https://github.com/Triono101/expressMysql-task#readme"
 }
